calculator/public/assets/style.css
* {
  font-size: 35px;
}
.button {
  /* at about 400px width of screen, Btn width reduce to 70px almost */
  width: 87px;
  margin: 2px;
  height: 58px;
  background-color: #4e4e4e;
  color: white;
  border: 1px solid black;
}

#keyPad {
  border-radius: 10px;
  margin: auto;
  width: 380px;
  background-color: black;
  border-bottom: 6px solid black;
  border-right: 2px solid black;
  border-left: 2px solid black;
  /* when screen becomes 425px,make width 100% */
}
.operand {
  background-color: rgb(202, 91, 0) !important;
}

#screen {
  width: 380px;
  border: 10px solid black;
  border-bottom: 7px solid black;
  margin: auto;
  border-radius: 10px;
}

#screen #expression {
  width: 100%;
  height: 50px;
  border: 0px;
  text-align: start;
}
#screen #result {
    height: 50px;
    width: 100%;
    text-align:end;
}

#calculator{
    margin-top: 7vh;
}

